resources/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    # ingress.kubernetes.io/auth-tls-error-page: getcert.addem.se
    ingress.kubernetes.io/auth-tls-secret: default/client-auth-root-ca-cert
    ingress.kubernetes.io/auth-tls-strict: "true"
    ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  tls:
    - hosts:
        - alertmanager.addem.se
      secretName: alertmanager-cert
  rules:
    - host: alertmanager.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
