resources/monitoring/kube-prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    # ingress.kubernetes.io/auth-tls-error-page: getcert.addem.se
    ingress.kubernetes.io/auth-tls-secret: default/client-auth-root-ca-cert
    ingress.kubernetes.io/auth-tls-strict: "true"
    ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  tls:
    - hosts:
        - grafana.addem.se
      secretName: grafana-cert
  rules:
    - host: grafana.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kube-scheduler
    k8s-app: kube-scheduler
  name: kube-scheduler
  namespace: kube-system
spec:
  selector:
    component: kube-scheduler
    tier: control-plane
  ports:
  - name: https-metrics
    port: 10259
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kube-controller-manager
    k8s-app: kube-controller-manager
  name: kube-controller-manager
  namespace: kube-system
spec:
  selector:
    component: kube-controller-manager
    tier: control-plane
  ports:
  - name: https-metrics
    port: 10257
